traces/bug_607.txt
src/femlib/gibbs.cpp:826: error: DEAD_STORE
  The value written to &i__1 (type long) is never used.
Showing all 1 steps of the trace


src/femlib/gibbs.cpp:826:2: Write of unused value
824.   /*     --- fin de la construction ------------------------------------ */
825.       if (*option == -2) {
826.   	i__1 = *impre - 1;
        ^
827.       }
828.       i__1 = *n;
